Swagger doc have information about image's methods
